<resources>
    <string name="app_name">GereTaxi</string>
    <string name="title_activity_maps">Map</string>
    <string name="processo">Nº Processo</string>
    <string name="iniciar_servi_o">Iniciar Serviço</string>
    <string name="terminar_servi_o">Terminar Serviço</string>
    <string name="mostrar_dist_ncia">Mostrar Distância</string>
    <string name="mostra_servi_o">Mostrar Serviço</string>
    <string name="iniciar_servico">Iniciar Serviço</string>
    <string name="escolhe_tipo_servico">Escolha o tipo de Serviço</string>
    <string name="terminar_servico">Terminar_Servico</string>
    <string name="terminar">Terminar</string>
    <string name="title_activity_maps2">Map</string>
    <string name="rejeitar_servi_o">Rejeitar Serviço</string>
    <string name="aceitar_servi_o">Aceitar Serviço</string>
    <string name="title_activity_maps3">Map</string>
    <string name="seguradora">Cliente</string>
    <string name="n_mero_de_passageiros">Número de Passageiros</string>
    <string name="introduza_o_valor_das_portagens">Introduza o valor das Portagens</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Confirmar</string>
    <string name="submeter">Submeter</string>
    <string name="corriga_os_dados">Corrija os dados</string>
    <string name="assistencia_em_viagem">Assistência em viagem</string>
    <string name="insira_um_numero">Insira um número</string>
    <string name="insira_um_valor_valido">Insira um valor válido</string>
    <string name="inserir_portagens">Inserir Portagens</string>
    <string name="aceitar_servico">Aceitar Serviço</string>
    <string name="acidente_de_trabalho">Acidente de Trabalho</string>
    <string name="particular">Serviço Particular</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirme_password">Confirme Password</string>
    <string name="detetar_localiza_o">Detetar Localização</string>
    <string name="submeter1sttime">Submeter</string>
    <string name="cliente">Cliente *</string>
    <string name="inser_o_manual_de_servi_o">Inserção Manual de Serviço</string>
    <string name="processoform">Processo *</string>
    <string name="data">Data *</string>
    <string name="n_de_passageiros">Nº de Passageiros *</string>
    <string name="inserir_data">Inserir Data</string>
    <string name="hora_de_inicio">Hora de Inicio *</string>
    <string name="inserir_hora_de_inicio">Inserir Hora de Inicio</string>
    <string name="origem">Origem *</string>
    <string name="destino">Destino *</string>
    <string name="custos_de_portagens">Custos de Portagens</string>
    <string name="distancia_km">Distancia (Km) *</string>
    <string name="horas_de_espera">Horas de Espera</string>
    <string name="trajeto">Trajeto *</string>
    <string name="tipo_de_servi_o">Tipo de Serviço *</string>
    <string name="inserir_servi_o">Inserir Serviço</string>
    <string name="email_login">Email (Login)</string>
    <string name="passwordlogin">Password</string>
    <string name="login">Login</string>
    <string name="ou_registe_aqui">ou Registe-se AQUI</string>
    <string name="iniciar">Menu Principal</string>
    <string name="defini_es_de_conta">Definições de Conta</string>
    <string name="coordenadas_da_pra_a_de_t_xis">Coordenadas da Praça de Táxis</string>
    <string name="infoPracaDeTaxis">Deverá introduzir as coordenadas da Praça de Táxis manualmente ou utilizar a Localização Automática</string>
    <string name="procurar">Procurar</string>
    <string name="sat_lite">Satélite</string>
    <string name="morada">Insira um Endereço</string>
    <string name="obter_localiza_o_autom_tica">Guardar Localização</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="procurarss">Procurar</string>
    <string name="sat_litess">Satélite</string>
    <string name="moradass">Insira um Endereço</string>
    <string name="obter_localiza_o_autom_ssstica">Guardar Localização</string>
    <string name="clientes">Clientes</string>
    <string name="actualizar_dados_do_cliente">Actualizar dados do Cliente</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="pesquise_pelo_nome_do_cliente">Pesquise pelo Nome do Cliente</string>
    <string name="eliminar">Eliminar</string>
    <string name="settings">Settings</string>
    <string name="definicoes">Definições</string>
    <string name="logout">Logout</string>
    <string name="dados_do_servi_o">Dados do Serviço</string>
    <string name="submeter_servi_o">Submeter Serviço</string>


</resources>
