<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="p4.geretaxi.AssistenciaEmViagemActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextProcesso"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:hint="@string/processo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_servico"
        android:id="@+id/buttonIniciar"
        android:onClick="onClickIniciar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminar"
        android:id="@+id/buttonTermina"
        android:onClick="onClickTerminar"
        android:layout_alignTop="@+id/buttonIniciar"
        android:layout_alignRight="@+id/buttonIniciar"
        android:layout_alignEnd="@+id/buttonIniciar"
        android:layout_alignLeft="@+id/buttonIniciar"
        android:layout_alignStart="@+id/buttonIniciar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSeguradora"
        android:layout_below="@+id/editTextProcesso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextProcesso"
        android:layout_alignEnd="@+id/editTextProcesso"
        android:inputType="text"
        android:hint="@string/seguradora" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassageiros"
        android:layout_below="@+id/editTextSeguradora"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/n_mero_de_passageiros"
        android:inputType="number" />

</RelativeLayout>
