<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="p4.geretaxi.LoginActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLoginMail"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/email_login"
            android:textAlignment="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassLogin"
            android:layout_below="@+id/editTextLoginMail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editTextLoginMail"
            android:layout_alignEnd="@+id/editTextLoginMail"
            android:textAlignment="center"
            android:hint="@string/password" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:layout_below="@+id/editTextPassLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:onClick="onClickbtnLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ou_registe_aqui"
            android:id="@+id/txtOuRegiste"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:onClick="onClickRegistarActivity" />
</RelativeLayout>
