<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/corriga_os_dados"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cliente"
        android:layout_gravity="center"
        android:textAlignment="center" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_weight="0.47"
        android:id="@+id/spinner"></Spinner>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:text="@string/ok"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/holo_red_dark"
            android:clickable="true"
            android:text="@string/cancelar"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>