<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.IniciaServicoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Cliente"
        android:id="@+id/txtCliente"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:id="@+id/spinner"
        android:layout_below="@+id/txtCliente"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextProcesso"
        android:inputType="text"
        android:hint="@string/processo"
        android:textAlignment="center"
        android:layout_below="@+id/spinner"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassageiros"
        android:hint="@string/n_mero_de_passageiros"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_below="@+id/editTextProcesso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_servico"
        android:id="@+id/buttonIniciar"
        android:onClick="onClickIniciar"
        android:layout_below="@+id/editTextPassageiros"
        android:layout_alignRight="@+id/editTextPassageiros"
        android:layout_alignEnd="@+id/editTextPassageiros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminar"
        android:id="@+id/buttonTermina"
        android:onClick="onClickTerminar"
        android:layout_below="@+id/editTextPassageiros"
        android:layout_alignRight="@+id/buttonIniciar"
        android:layout_alignEnd="@+id/buttonIniciar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#e11616"
        android:textColor="#ffffff" />

</RelativeLayout>
