<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fefeff"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/coordenadas_da_pra_a_de_t_xis"
        android:id="@+id/txtCoordenadas"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/infoPracaDeTaxis"
            android:id="@+id/txtInfoCoordenadas"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtLatitude"
            android:hint="Latitude"
            android:textAlignment="center"
            android:layout_below="@+id/txtInfoCoordenadas"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtLongitude"
            android:hint="Longitude"
            android:textAlignment="center"
            android:layout_below="@+id/edtLatitude"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/procurarss"
            android:id="@+id/btnSearch"
            android:onClick="onSearch"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnSateliteMap"
            android:layout_toStartOf="@+id/btnSateliteMap" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/sat_litess"
            android:id="@+id/btnSateliteMap"
            android:onClick="changeType"
            android:background="@color/link_text_material_dark"
            android:textColor="#ffffff"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtSearch"
            android:layout_gravity="center_horizontal|top"
            android:hint="@string/moradass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/btnSearch"
            android:layout_toStartOf="@+id/btnSearch" />

        <FrameLayout android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edtSearch">

            <ProgressBar
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:id="@+id/progress_bar"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="top|center"
                android:visibility="invisible"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="false" />

            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                tools:context=".MapsActivity"
                android:layout_gravity="center_horizontal|top" />

        </FrameLayout>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/obter_localiza_o_autom_ssstica"
            android:id="@+id/btnObterLocalizacao"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>